add current and forecast
