# backend/pkg/proto/endpoints.v1.pb.go
@@ -210,7 +210,7 @@ type WeatherCurrent struct {
 	Temperature float32     `protobuf:"fixed32,1,opt,name=temperature,proto3" json:"temperature,omitempty"`
 	WindSpeed   float32     `protobuf:"fixed32,2,opt,name=windSpeed,proto3" json:"windSpeed,omitempty"`
 	Timestamp   uint64      `protobuf:"varint,3,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
-	Humidity    float32     `protobuf:"fixed32,4,opt,name=humidity,proto3" json:"humidity,omitempty"`
+	Humidity    int32       `protobuf:"varint,4,opt,name=humidity,proto3" json:"humidity,omitempty"`
 	Weather     WeatherType `protobuf:"varint,5,opt,name=weather,proto3,enum=endpoints.v1.WeatherType" json:"weather,omitempty"`
 }
 
@@ -267,7 +267,7 @@ func (x *WeatherCurrent) GetTimestamp() uint64 {
 	return 0
 }
 
-func (x *WeatherCurrent) GetHumidity() float32 {
+func (x *WeatherCurrent) GetHumidity() int32 {
 	if x != nil {
 		return x.Humidity
 	}
@@ -343,7 +343,7 @@ type WeatherDailyPoint struct {
 
 	Timestamp        uint64            `protobuf:"varint,1,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	Temperature      float32           `protobuf:"fixed32,2,opt,name=temperature,proto3" json:"temperature,omitempty"`
-	Humidity         float32           `protobuf:"fixed32,3,opt,name=humidity,proto3" json:"humidity,omitempty"`
+	Humidity         int32             `protobuf:"varint,3,opt,name=humidity,proto3" json:"humidity,omitempty"`
 	TemperatureRange *TemperatureRange `protobuf:"bytes,4,opt,name=temperatureRange,proto3" json:"temperatureRange,omitempty"`
 	Weather          WeatherType       `protobuf:"varint,5,opt,name=weather,proto3,enum=endpoints.v1.WeatherType" json:"weather,omitempty"`
 }
@@ -394,7 +394,7 @@ func (x *WeatherDailyPoint) GetTemperature() float32 {
 	return 0
 }
 
-func (x *WeatherDailyPoint) GetHumidity() float32 {
+func (x *WeatherDailyPoint) GetHumidity() int32 {
 	if x != nil {
 		return x.Humidity
 	}
@@ -491,7 +491,7 @@ var file_endpoints_v1_proto_rawDesc = []byte{
 	0x6e, 0x64, 0x53, 0x70, 0x65, 0x65, 0x64, 0x12, 0x1c, 0x0a, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73,
 	0x74, 0x61, 0x6d, 0x70, 0x18, 0x03, 0x20, 0x01, 0x28, 0x04, 0x52, 0x09, 0x74, 0x69, 0x6d, 0x65,
 	0x73, 0x74, 0x61, 0x6d, 0x70, 0x12, 0x1a, 0x0a, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74,
-	0x79, 0x18, 0x04, 0x20, 0x01, 0x28, 0x02, 0x52, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74,
+	0x79, 0x18, 0x04, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74,
 	0x79, 0x12, 0x33, 0x0a, 0x07, 0x77, 0x65, 0x61, 0x74, 0x68, 0x65, 0x72, 0x18, 0x05, 0x20, 0x01,
 	0x28, 0x0e, 0x32, 0x19, 0x2e, 0x65, 0x6e, 0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x73, 0x2e, 0x76,
 	0x31, 0x2e, 0x57, 0x65, 0x61, 0x74, 0x68, 0x65, 0x72, 0x54, 0x79, 0x70, 0x65, 0x52, 0x07, 0x77,
@@ -505,7 +505,7 @@ var file_endpoints_v1_proto_rawDesc = []byte{
 	0x6d, 0x70, 0x12, 0x20, 0x0a, 0x0b, 0x74, 0x65, 0x6d, 0x70, 0x65, 0x72, 0x61, 0x74, 0x75, 0x72,
 	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x02, 0x52, 0x0b, 0x74, 0x65, 0x6d, 0x70, 0x65, 0x72, 0x61,
 	0x74, 0x75, 0x72, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
-	0x18, 0x03, 0x20, 0x01, 0x28, 0x02, 0x52, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
+	0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
 	0x12, 0x4a, 0x0a, 0x10, 0x74, 0x65, 0x6d, 0x70, 0x65, 0x72, 0x61, 0x74, 0x75, 0x72, 0x65, 0x52,
 	0x61, 0x6e, 0x67, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1e, 0x2e, 0x65, 0x6e, 0x64,
 	0x70, 0x6f, 0x69, 0x6e, 0x74, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x65, 0x6d, 0x70, 0x65, 0x72,
